Version 2.02.171 - 
==================================
  Adjust pvresize messages and add prompt if underlying dev size differs.
  raid - sanely handle insufficient space on takeover.
  Fix configure --enable-notify-dbus status message.
  Change configure option name prefix from --enable-lockd to --enable-lvmlockd.
  lvcreate - raise mirror/raid default regionsize to 2MiB
  Add missing configurable prefix to configuration file installation directory.

Version 2.02.170 - 13th April 2017
==================================
  Introduce global/fsadm_executable to make fsadm path configurable.
  Look for limited thin pool metadata size when using 16G metadata.
  Add lvconvert pool creation rule disallowing options with poolmetadata.
  Fix lvconvert when the same LV is incorrectly reused in options.
  Fix lvconvert VG name validation in option values.
  Fix missing lvmlockd LV locks in lvchange and lvconvert.
  Fix dmeventd setup for lvchange --poll.
  Fix use of --poll and --monitor with lvchange and vgchange.
  Disallow lvconvert of hidden LV to a pool.
  Ignore --partial option when not used for activation.
  Allow --activationmode option with lvchange --refresh.
  Better message on lvconvert --regionsize
  Allow valid lvconvert --regionsize change
  Add raid10 alias raid10_near
  Handle insufficient PVs on lvconvert takeover
  Fix SIGINT blocking to prevent corrupted metadata
  Fix systemd unit existence check for lvmconf --services --startstopservices.
  Check and use PATH_MAX buffers when creating vgrename device paths.

Version 2.02.169 - 28th March 2017
==================================
  Automatically decide whether '-' in a man page is a hyphen or a minus sign.
  Add build-time configuration command line to 'lvm version' output.
  Handle known table line parameter order change in specific raid target vsns.
  Conditionally reject raid convert to striped/raid0* after reshape.
  Ensure raid6 upconversion restrictions.