@@ -1,5 +1,6 @@
 Version 2.02.171 - 
 ==================================
+  lvconvert - preserve region size on raid1 image count changes
   Adjust pvresize messages and add prompt if underlying dev size differs.
   raid - sanely handle insufficient space on takeover.
   Fix configure --enable-notify-dbus status message.
